--- a/NIST_Abstract.tex
+++ b/NIST_Abstract.tex
@@ -1,7 +1,7 @@
 \pagebreak
 
 \begin{center}
-	{\Large \bf Measurement of Human-robot Coolaborative Performance in Teleoperated Complex Motion Coordination}\\
+	{\Large \bf Measure Human Adaption Level to Robot Teleoperation Interface}\\
     \vspace{4pt}
 % 	\renewcommand{\baselinestretch}{1}
    	{\large PI: Zhi Li (Worcester Polytechnic Institute)}
@@ -11,16 +11,33 @@
 
 \vspace{1 em}
 
-% \paragraph*{\Large Project Summary} 
-This project aims to develop novel and systematic metrics to measure the collaborative performance of human and robot in teleoperation, and to quantitatively compare the usability of various human-robot control interfaces in complex motion coordination. Examples of such complex motion coordination include (1) the hand-arm coordination, bimanual coordination and loco-manipulation of tele-nursing robot, (2) the coordination of multi-arm and macro-micro structure of surgical robotic system, and (3) the coordination of heterogeneous robot swarm in collaborative transportation and manipulation. 
+\paragraph*{\Large Project Summary} 
+This project aims to develop novel metrics to measure the level of adaption of human teleoperator to robot teleoperation interface, and to quantitatively compare the usability of various human-robot control interfaces for manufacturing tasks that involve complex motion coordination. In this research, we will setup various teleoperation interfaces to control the hand-arm coordination, bimanual coordination and loco-manipulation of a mobile humanoid robot, and (2) the coordination of multi-arm and macro-micro structure of precise manipulator robotic system. 
+In addition to the available human, robot and task performance metrics, we propose novel metrics, including the \textit{complexity}, \textit{predictability}, \textit{intuitivity} and \textit{robust to uncertainty}, to measure the low-level motor skills of a teleoperator exhibited through the teleoperation interface. We further compose abstract representation of the motion coordination plan, and infer the \textit{reward function} of the teleoperator in decision-making. Our proposed method will be used to evaluate the skill progression from novice to expert, and to identify the milestones and thresholds in robot teleoperation skill development. The proposed project will inform the development of transparent interface for controlling complex robotic system, and will provide guideline to the development of intelligence robot assistance to reduce the control and learning efforts of manfacturing workers.  
 
-Planning and control of motion coordination of a complex robotic system in cluttered human environment requires human-level manipulation dexterity and decision-making intelligence and thus far can only be reliably achieved under direct teleoperation. The performance of human-robot teleoperation system depends primarily on the teleoperator's expertise, which reflects how well the teleoperators can utilize the motion and perception capabilities of their remote robot surrogate given the motion/perception mapping defined by the teleoperation interface. Studies on teleoperation interface design have proposed methods that facilitate intuitive motion mapping, and reduce perception/control workload and discomfort. However, little research has been conducted to measure and compare the coordinated motions teleoperated through various interface by the quality of low-level motor skills and high-level decision-making. Performance metrics haven been developed for human and robot independently without considering their task-dependent and time-varying synergy. Thus, through this project we aim to develop and validate metrics for measuring the adaption level of human motor control and decision-making strategy to a teleoperated robotic system in complex motion coordination.  
 
-% adapt human motion coordination strategies to their remote robot surrogates.
+% the teleoperated motion coordination. 
 
-To meet this need, we propose to learn from novice- and expert-demonstration of the motion coordination, compare the demonstrations by their low-level motion primitive models and high-level motion plan model, to learn the features for measure the performance of human-robot teleoperation system. The demonstrations are collected from a mobile humanoid robot controlled through various teleoperation interfaces. Standard human and robot performance metrics are used to evaluate meta performance of human-robot teleoperation system, and quantify the skill levels of novices and experts. Dynamic movement primitives (DMP) and Gaussian Mixture Model/Gaussian Mixture Regression (GMM/GMR) are used to model the motion coordination within robotic system, while Probabilistic Movement Primitives (Pro-MP) is used to model the motion coordination between robotic system and environment. Novel metrics for the regularity, variability, complexity of the motion primitives are proposed as the features to characterize the low-level motor skills. Machine learning methods are used to identify the principle components and characteristic synergy in the motion primitive feature space, to compare low-level motor skills across tasks, teleoperation interfaces, and users. To model the high-level task plan, we abstract the critical robot states in motion coordination  and motion primitives for state transition to symbols, and use these symbols to construct an abstract task space graph. The costs of graph nodes and edges, which denote the abstract states and state-transition motion primitives, are assigned by weighting the teleoperator's operation efforts, efficiency, frequency and success ratio. Given the abstract motion coordination representation, we propose several optimization criteria, derived from several hypotheses of the human motion coordination strategies, and compose a reward function with unknown weighting coefficients. The weighting assignment learned from demonstrated high-level task plan can be used for evaluate and compare a teleoperator's motion coordination control strategies. 
 
-Our proposed methods can be generalized to evaluate the teleoperated motion coordination for various complex robotic systems. Previous research at WPI human-inspired robotics lab has integrated a mobile humanoid robots which supports teleoperation from multi-modal interfaces. The proposed model user study, model development and data analysis can be accomplished in one year. Future work may include (1) extending the proposed project to evaluate the motion coordination of the multi-arm surgical robot (platform available at WPI AIM lab) and swarm robot system (available at WPI NEST lab), as well as available industrial robot platform at research lab at NIST; and (2) using the developed evaluation metrics to study the motor skill progression from novice to expert; and (3) shift the control between human teleoperator and intelligent tele-operated robot based on learning of high-level motion coordination strategies and low-level coordinated motion primitives from human teleoperators. 
+% measure the human-robot collaboration performance in teleoperation by
+
+% of low-level motion primitives and high-level task plan in the
+
+
+
+
+% % Specifically, we decompose the decompose the teleoperated robot motion coordination to identify the set the low-level motion primitives for each robot component and their frequent combination. We further construct the high-level representation of the teleoperated robot motion coordination using robot option symbols (the abstraction of the motion primitives). 
+
+% % and their ( abstract robot-task states   
+
+% evaluate the level of decompose the motion coordination  
+% Planning and control of motion coordination of a complex robotic system in cluttered human environment requires human-level manipulation dexterity and decision-making intelligence and thus far can only be reliably achieved under direct teleoperation. The performance of human-robot teleoperation system depends primarily on the teleoperator's expertise, which reflects how well the teleoperators can utilize the motion and perception capabilities of their remote robot surrogate given the motion/perception mapping defined by the teleoperation interface. Studies on teleoperation interface design have proposed methods that facilitate intuitive motion mapping, and reduce perception/control workload and discomfort. However, little research has been conducted to measure and compare the coordinated motions teleoperated through various interface by the quality of low-level motor skills and high-level decision-making. Performance metrics haven been developed for human and robot independently without considering their task-dependent and time-varying synergy. Thus, through this project we aim to develop and validate metrics for measuring the adaption level of human motor control and decision-making strategy to a teleoperated robotic system in complex motion coordination.  
+
+% % adapt human motion coordination strategies to their remote robot surrogates.
+
+% To meet this need, we propose to learn from novice- and expert-demonstration of the motion coordination, compare the demonstrations by their low-level motion primitive models and high-level motion plan model, to learn the features for measure the performance of human-robot teleoperation system. The demonstrations are collected from a mobile humanoid robot controlled through various teleoperation interfaces. Standard human and robot performance metrics are used to evaluate meta performance of human-robot teleoperation system, and quantify the skill levels of novices and experts. Dynamic movement primitives (DMP) and Gaussian Mixture Model/Gaussian Mixture Regression (GMM/GMR) are used to model the motion coordination within robotic system, while Probabilistic Movement Primitives (Pro-MP) is used to model the motion coordination between robotic system and environment. Novel metrics for the regularity, variability, complexity of the motion primitives are proposed as the features to characterize the low-level motor skills. Machine learning methods are used to identify the principle components and characteristic synergy in the motion primitive feature space, to compare low-level motor skills across tasks, teleoperation interfaces, and users. To model the high-level task plan, we abstract the critical robot states in motion coordination  and motion primitives for state transition to symbols, and use these symbols to construct an abstract task space graph. The costs of graph nodes and edges, which denote the abstract states and state-transition motion primitives, are assigned by weighting the teleoperator's operation efforts, efficiency, frequency and success ratio. Given the abstract motion coordination representation, we propose several optimization criteria, derived from several hypotheses of the human motion coordination strategies, and compose a reward function with unknown weighting coefficients. The weighting assignment learned from demonstrated high-level task plan can be used for evaluate and compare a teleoperator's motion coordination control strategies. 
+
+% Our proposed methods can be generalized to evaluate the teleoperated motion coordination for various complex robotic systems. Previous research at WPI human-inspired robotics lab has integrated a mobile humanoid robots which supports teleoperation from multi-modal interfaces. The proposed model user study, model development and data analysis can be accomplished in one year. Future work may include (1) extending the proposed project to evaluate the motion coordination of the multi-arm surgical robot (platform available at WPI AIM lab) and swarm robot system (available at WPI NEST lab), as well as available industrial robot platform at research lab at NIST; and (2) using the developed evaluation metrics to study the motor skill progression from novice to expert; and (3) shift the control between human teleoperator and intelligent tele-operated robot based on learning of high-level motion coordination strategies and low-level coordinated motion primitives from human teleoperators. 
 
 
 
