--- a/ZhiLi_ref.bib
+++ b/ZhiLi_ref.bib
@@ -4581,7 +4581,9 @@
     url         = "citeseer.nj.nec.com/422684.html"
 }
 
-%%%%%%%%%%%%%%%%%%%%%%%% Additional %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%==================================
+%%  Unsorted Reference %%
+%%==================================
 
 @article{argall2009survey,
   title={A survey of robot learning from demonstration},
