Snapshot for Background

--- a/NIST_Abstract.tex
+++ b/NIST_Abstract.tex
@@ -1,7 +1,7 @@
 \pagebreak
 
 \begin{center}
-	{\Large \bf Measure Human Adaption Level to Robot Teleoperation Interface}\\
+	{\Large \bf Human Performance and Interface Usability for Complex Robot Teleoperation}\\
     \vspace{4pt}
 % 	\renewcommand{\baselinestretch}{1}
    	{\large PI: Zhi Li (Worcester Polytechnic Institute)}
@@ -12,8 +12,7 @@
 \vspace{1 em}
 
 \paragraph*{\Large Project Summary} 
-This project aims to develop novel metrics to measure the level of adaption of human teleoperator to robot teleoperation interface, and to quantitatively compare the usability of various human-robot control interfaces for manufacturing tasks that involve complex motion coordination. In this research, we will setup various teleoperation interfaces to control the hand-arm coordination, bimanual coordination and loco-manipulation of a mobile humanoid robot, and (2) the coordination of multi-arm and macro-micro structure of precise manipulator robotic system. 
-In addition to the available human, robot and task performance metrics, we propose novel metrics, including the \textit{complexity}, \textit{predictability}, \textit{intuitivity} and \textit{robust to uncertainty}, to measure the low-level motor skills of a teleoperator exhibited through the teleoperation interface. We further compose abstract representation of the motion coordination plan, and infer the \textit{reward function} of the teleoperator in decision-making. Our proposed method will be used to evaluate the skill progression from novice to expert, and to identify the milestones and thresholds in robot teleoperation skill development. The proposed project will inform the development of transparent interface for controlling complex robotic system, and will provide guideline to the development of intelligence robot assistance to reduce the control and learning efforts of manfacturing workers.  
+This 1-year project aims to develop novel metrics to compare the usability of various robot control interfaces, and measure human skill level in controlling complex robot motion coordination. In this research, we will compare various interfaces for controlling the hand-arm coordination, bimanual coordination and loco-manipulation of a mobile humanoid robot. We propose novel metrics, including \textit{Outcome Predictability}, \textit{Mapping Sensitivity}, \textit{Operation complexity}, to measure the usability of teleoperation interfaces. We extract the motion primitive sets and task plans of controlled robot motion coordination, and study their evolution during a teleoperator's skill progression from novice to expert. We propose to evaluate human performance using the regularity and variability of the motion primitives. We further compose abstract representation of the motion coordination plan, and infer the \textit{reward function} of the teleoperator as human's high-level strategies for controlling robot motion coordination. The proposed project will inform the development of transparent interface for controlling complex robotic system to perform multi-component, multi-robot and multi-agent coordination tasks. It will identify the milestones and thresholds in robot teleoperation skill acquisition, and benefits the development of intelligence robot assistance and skilled worker training paradigm.  
 
 
 % the teleoperated motion coordination. 
