--- a/ZhiLi_ref.bib
+++ b/ZhiLi_ref.bib
@@ -3220,6 +3220,25 @@
   pages         = "906-911",
 };
 
+@inproceedings{Rosen_Li_EMBC:15,
+  title={A novel method for quantifying arm motion similarity},
+  author={Li, Z. and Hauser, K. and Roldan, JR and Milutinovi\'c, D and Rosen, J.},
+  booktitle={37th Annual International Conference of the IEEE Engineering in Medicine and Biology Society (EMBC)},
+  pages={5716--5719},
+  year={2015}
+}
+
+@article{Rosen_Li:17,
+  title={From reaching to reach-to-grasp: the arm posture difference and its implications on human motion control strategy},
+  author={Li, Zhi and Milutinovi{\'c}, Dejan and Rosen, Jacob},
+  journal={Experimental brain research},
+  volume={235},
+  number={5},
+  pages={1627--1642},
+  year={2017},
+  publisher={Springer}
+}
+
 
 @Incollection{Rosen_Perry_UL7:08,
     author      = "Perry Joel C. and Jacob Rosen",
@@ -4801,16 +4820,6 @@
   year={2017}
 }
 
-@article{li2017reaching,
-  title={From reaching to reach-to-grasp: the arm posture difference and its implications on human motion control strategy},
-  author={Li, Zhi and Milutinovi{\'c}, Dejan and Rosen, Jacob},
-  journal={Experimental brain research},
-  volume={235},
-  number={5},
-  pages={1627--1642},
-  year={2017},
-  publisher={Springer}
-}
 
 @inproceedings{li2014task,
   title={Task-relevance of grasping-related degrees of freedom in reach-to-grasp movements},
